kubernetes/apps/gallery/gallery/app/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery-api
  namespace: gallery
  labels:
    app: gallery-api
spec:
  selector:
    matchLabels:
      app: gallery-api
  template:
    metadata:
      labels:
        app: gallery-api
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: gallery-api
          image: ghcr.io/rwade628/gallery-api:v2
          ports:
            - containerPort: 8081
              name: gallery-api
          volumeMounts:
            - mountPath: "/usr/share/media"
              name: media-volume
            - mountPath: "/usr/share/db"
              name: db-volume
          imagePullPolicy: Always
          resources: {}
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-claim
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-claim
