kubernetes/apps/gallery/gallery/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gallery-api
  name: gallery-api
  namespace: gallery
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: gallery-api
