kubernetes/apps/gallery/gallery/app/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gallery-ui
  name: gallery-ui
  namespace: gallery
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: gallery-ui
